web/static/css/style.css
#simulationBoard {
    border: 1px solid rgb(175, 216, 248);
    margin: auto;
}

#simulationBoardSm {
    border: 1px solid rgb(175, 216, 248);
    position: absolute;
    top: 3vh;
    right: 3vh;
}

#circle-play-btn {
    position: absolute;
    left: 3vh;
    top: 3vh;
}

#simulationInfo {
    position: absolute;
    left: 0vh;
    top: 25vh;
    padding: 1rem;
    background-color: rgb(255, 255, 220);
    border: 2px solid #f4f4f4;
    border-radius: 5px;
}

#simulationBoardSmCost {
    position: absolute;
    top: 330px;
    right: 135px;
}

h2 {
    text-align: center;
    font-family: monospace;
    color: lightgrey;
}

.s-col {
    width: 15px;
    height: 15px;
    border: 0.1px solid rgba(175, 216, 248, 0.9);
}

.s-col.sm {
    width: 7.5px;
    height: 7.5px;
}

.uav {
    background-color: rgba(255, 0, 0, 0.8);
    border-radius: 10%;
    border: 2px solid black;
}

.navbar {
    min-height: 9vh;
}

.particle-movement {
    background-color: rgba(0, 255, 255, 0.3);
    font-size: 8px;
    text-align: center;
}
.particle-movement.sm {
    font-size: 4px;
}

#visualise, #help-open-btn {
    font-weight: bolder;
    color: black !important;
}

.main-simulation {
    width: 100%;
    height: 100%;
    position: relative;
}

.navbar-toggler-icon {
    cursor: pointer;
    color: white;
}

img#settings-btn-icon {
    width: 22px;
    height: 22px;
    position: relative;
    top: 1px;
}

label {
    font-size: 80%!important;
}

.model-header {
    border-bottom: 0!important;
}

.algo-status, .algo-status-details {
    font-size: 1.3rem;
    font-family: monospace;
}

.algo-status-details {
    font-size: 1rem;
}

